@@ -564,40 +564,88 @@ public class UIUtil
     }    
     
 	/**
-	 * Encode a bitstream name for inclusion in a URL in an HTML document.
-	 * This differs from the usual URL-encoding, since we want pathname
-	 * separators to be passed through verbatim; this is required
-	 * so that relative paths in bitstream names and HTML references
-	 * work correctly.
-	 * <P>
-	 * If the link to a bitstream is generated with the pathname separators
-	 * escaped (e.g. "%2F" instead of "/") then the Web user agent perceives
-	 * it to be one pathname element, and relative URI paths within that
-	 * document containing ".." elements will be handled incorrectly.
-	 * <P>
-	 * @param stringIn
-	 *		  input string to encode
-	 * @param encoding
-	 *		  character encoding, e.g. UTF-8
-	 * @return the encoded string
-	 */
-	 public static String encodeBitstreamName(String stringIn, String encoding)
-	 throws java.io.UnsupportedEncodingException
-	 {
-		int curStart = 0;
-		int nextSlash = stringIn.indexOf("/");
-		String out = "";
-	
-		while (nextSlash != -1)
-		{
-		    out += URLEncoder.encode(stringIn.substring(curStart, nextSlash), encoding) +
-			   "/";
-		    curStart = nextSlash + 1;
-		    nextSlash = stringIn.indexOf("/", curStart);
-		}
-		out += URLEncoder.encode(stringIn.substring(curStart), encoding);
-		return out;
-	 }
+     * Encode a bitstream name for inclusion in a URL in an HTML document. This
+     * differs from the usual URL-encoding, since we want pathname separators to
+     * be passed through verbatim; this is required so that relative paths in
+     * bitstream names and HTML references work correctly.
+     * <P>
+     * If the link to a bitstream is generated with the pathname separators
+     * escaped (e.g. "%2F" instead of "/") then the Web user agent perceives it
+     * to be one pathname element, and relative URI paths within that document
+     * containing ".." elements will be handled incorrectly.
+     * <P>
+     * 
+     * @param stringIn
+     *            input string to encode
+     * @param encoding
+     *            character encoding, e.g. UTF-8
+     * @return the encoded string
+     */
+    public static String encodeBitstreamName(String stringIn, String encoding)
+            throws java.io.UnsupportedEncodingException
+    {
+        // FIXME: This should be moved elsewhere, as it is used outside the UI
+        StringBuffer out = new StringBuffer();
+
+        final String[] pctEncoding = { "%00", "%01", "%02", "%03", "%04",
+                "%05", "%06", "%07", "%08", "%09", "%0a", "%0b", "%0c", "%0d",
+                "%0e", "%0f", "%10", "%11", "%12", "%13", "%14", "%15", "%16",
+                "%17", "%18", "%19", "%1a", "%1b", "%1c", "%1d", "%1e", "%1f",
+                "%20", "%21", "%22", "%23", "%24", "%25", "%26", "%27", "%28",
+                "%29", "%2a", "%2b", "%2c", "%2d", "%2e", "%2f", "%30", "%31",
+                "%32", "%33", "%34", "%35", "%36", "%37", "%38", "%39", "%3a",
+                "%3b", "%3c", "%3d", "%3e", "%3f", "%40", "%41", "%42", "%43",
+                "%44", "%45", "%46", "%47", "%48", "%49", "%4a", "%4b", "%4c",
+                "%4d", "%4e", "%4f", "%50", "%51", "%52", "%53", "%54", "%55",
+                "%56", "%57", "%58", "%59", "%5a", "%5b", "%5c", "%5d", "%5e",
+                "%5f", "%60", "%61", "%62", "%63", "%64", "%65", "%66", "%67",
+                "%68", "%69", "%6a", "%6b", "%6c", "%6d", "%6e", "%6f", "%70",
+                "%71", "%72", "%73", "%74", "%75", "%76", "%77", "%78", "%79",
+                "%7a", "%7b", "%7c", "%7d", "%7e", "%7f", "%80", "%81", "%82",
+                "%83", "%84", "%85", "%86", "%87", "%88", "%89", "%8a", "%8b",
+                "%8c", "%8d", "%8e", "%8f", "%90", "%91", "%92", "%93", "%94",
+                "%95", "%96", "%97", "%98", "%99", "%9a", "%9b", "%9c", "%9d",
+                "%9e", "%9f", "%a0", "%a1", "%a2", "%a3", "%a4", "%a5", "%a6",
+                "%a7", "%a8", "%a9", "%aa", "%ab", "%ac", "%ad", "%ae", "%af",
+                "%b0", "%b1", "%b2", "%b3", "%b4", "%b5", "%b6", "%b7", "%b8",
+                "%b9", "%ba", "%bb", "%bc", "%bd", "%be", "%bf", "%c0", "%c1",
+                "%c2", "%c3", "%c4", "%c5", "%c6", "%c7", "%c8", "%c9", "%ca",
+                "%cb", "%cc", "%cd", "%ce", "%cf", "%d0", "%d1", "%d2", "%d3",
+                "%d4", "%d5", "%d6", "%d7", "%d8", "%d9", "%da", "%db", "%dc",
+                "%dd", "%de", "%df", "%e0", "%e1", "%e2", "%e3", "%e4", "%e5",
+                "%e6", "%e7", "%e8", "%e9", "%ea", "%eb", "%ec", "%ed", "%ee",
+                "%ef", "%f0", "%f1", "%f2", "%f3", "%f4", "%f5", "%f6", "%f7",
+                "%f8", "%f9", "%fa", "%fb", "%fc", "%fd", "%fe", "%ff" };
+
+        byte[] bytes = stringIn.getBytes(encoding);
+
+        for (int i = 0; i < bytes.length; i++)
+        {
+            // Any unreserved char or "/" goes through unencoded
+            if ((bytes[i] >= 'A' && bytes[i] <= 'Z')
+                    || (bytes[i] >= 'a' && bytes[i] <= 'z')
+                    || (bytes[i] >= '0' && bytes[i] <= '9') || bytes[i] == '-'
+                    || bytes[i] == '.' || bytes[i] == '_' || bytes[i] == '~'
+                    || bytes[i] == '/')
+            {
+                out.append((char) bytes[i]);
+            }
+            else if (bytes[i] >= 0)
+            {
+                // encode other chars (byte code < 128)
+                out.append(pctEncoding[bytes[i]]);
+            }
+            else
+            {
+                // encode other chars (byte code > 127, so it appears as
+                // negative in Java signed byte data type)
+                out.append(pctEncoding[256 + bytes[i]]);
+            }
+        }
+        log.debug("encoded \"" + stringIn + "\" to \"" + out.toString() + "\"");
+
+        return out.toString();
+    }
 
 	/** Version of encodeBitstreamName with one parameter, uses default encoding
 	 * <P>
